--- a/templates/index.html
+++ b/templates/index.html
@@ -15,34 +15,28 @@
                 <input type="text" class="form-control" id="symbol" name="symbol" required>
             </div>
             <div class="form-group">
-                <label for="future_date">Future Date (YYYY-MM-DD):</label>
-                <input type="date" class="form-control" id="future_date" name="future_date" required>
+                <label for="future_date">Enter Future Date (YYYY-MM-DD):</label>
+                <input type="date" class="form-control" id="future_date" name="future_date">
             </div>
             <button type="submit" class="btn btn-primary">Predict</button>
         </form>
 
         {% if error_message %}
-            <div class="alert alert-danger mt-4">{{ error_message }}</div>
+        <div class="alert alert-danger mt-4">{{ error_message }}</div>
         {% endif %}
 
-        {% if future_prediction is not none %}
-            <div class="alert alert-info mt-4">
-                The prediction for {{ request.form['future_date'] }}, is {{ future_prediction }}.
-            </div>
-        {% endif %}
-
-        {% if plot_url %}
-            <h2 class="mt-5">Prediction Plot</h2>
-            <img src="{{ plot_url }}" alt="Stock Prices Plot" class="img-fluid">
+        {% if future_prediction %}
+        <div class="alert alert-success mt-4">Predicted Price for {{ future_dates[-1].strftime('%Y-%m-%d') }}: {{ future_prediction }}</div>
         {% endif %}
 
         {% if accuracy_score %}
-            <div class="alert alert-success mt-4">Accuracy Score: {{ accuracy_score }}%</div>
+        <div class="alert alert-info mt-4">Accuracy Score: {{ accuracy_score }}%</div>
+        {% endif %}
+
+        {% if plot_url %}
+        <h3 class="mt-5">Predicted vs Actual Prices</h3>
+        <img src="{{ plot_url }}" class="img-fluid mt-3" alt="Predicted vs Actual Prices">
         {% endif %}
     </div>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
