Update BUG fixes In the WebPage ForntPage

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
         {% endif %}
 
         {% if future_prediction %}
-        <div class="alert alert-success mt-4">Predicted Price for {{ future_dates[-1].strftime('%Y-%m-%d') }}: {{ future_prediction }}</div>
+        <div class="alert alert-success mt-4">Predicted Price for your entered Future date is : {{ future_prediction }}</div>
         {% endif %}
 
         {% if accuracy_score %}
