--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 
         {% if plot_url %}
         <h3 class="mt-5">Predicted vs Actual Prices</h3>
-        <img src="{{ plot_url }}" class="img-fluid mt-3" alt="Predicted vs Actual Prices">
+        <iframe src="{{ plot_url }}" width="100%" height="600" frameborder="0" class="mt-3"></iframe>
         {% endif %}
     </div>
 </body>
